--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Ethos</title>
+    <title>Portfolio</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -86,10 +86,10 @@
             <div class="column large-full">
 
                 <h1>
-                Hello, I'm John Doe, <br>
-                a frontend developer <br>
-                & designer currently <br>
-                based somewhere.
+                David Roufé, <br>
+                Développeur Python,PHP,C <br>
+                & Développeur Frontend JS <br>
+                situé à Paris.
                 </h1>
 
                 <ul class="hero-social">
@@ -610,7 +610,7 @@
         <div class="row s-footer__main">
             <div class="column large-6">
                 <div class="section-intro" data-aos="fade-up">
-                    <h3 class="subhead">Get In Touch</h3>
+                    <h3 class="subhead">Rester en contact   </h3>
 
                     <h1 class="display-1">
                     Have an idea or a concept that really excite you?
@@ -630,7 +630,7 @@
                             Email
                         </h5>
                         <p class="footer-contact-block__content">
-                            <a href="mailto:#0">sayhello@ethos.com</a>
+                            <a href="mailto:#0">david.roufe@gmail.com</a>
                         </p>
                     </div> <!-- end footer-contact-block -->
                     <div class="footer-contact-block" data-aos="fade-up">
@@ -638,7 +638,7 @@
                             Phone
                         </h5>
                         <p class="footer-contact-block__content">
-                            <a href="tel:+1975432345">+197 543 2345</a>
+                            <a href="tel:+1975432345">07 82 74 91 22</a>
                         </p>
                     </div> <!-- end footer-contact-block -->
                     <br>
